<resources>
    <string name="app_name">Pueblos Mágicos</string>

    <string name="title_notifications">Notificaciones</string>
    <string name="title_social">Social</string>
    <string name="title_descubrir">Pueblos mágicos</string>
    <string name="title_add_visita">Agregar visita</string>
    <string name="title_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
